--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -102,3 +102,6 @@ control_panel2_48 BITMAP "..\\bmp\\control_panel2_48.bmp"
 flat_clipboard_empty_user1_64 BITMAP "..\\bmp\\flat_clipboard_empty_user1_64.bmp"
 flat_about_64 BITMAP "..\\bmp\\flat_about_64.bmp"
 flat_atom_64 BITMAP "..\\bmp\\flat_atom_64.bmp"
+form_green_add_16 BITMAP "..\\bmp\\form_green_add_16.bmp"
+form_green_add_32 BITMAP "..\\bmp\\form_green_add_32.bmp"
+form_green_add_48_alpha BITMAP "..\\bmp\\form_green_add_48_alpha.bmp"
