--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17139,17 +17139,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Regularización", 131, "Button", BS_AUTORADIOBUTTON, 50, 113, 60, 10
   CONTROL "Regularización por objetivos", 132, "Button", BS_AUTORADIOBUTTON, 50, 125, 102, 10
   CONTROL "Consolidación stocks", 133, "Button", BS_AUTORADIOBUTTON, 50, 137, 102, 10
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 312, 36, 82, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 396, 36, 260, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 312, 49, 82, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 396, 49, 260, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 312, 62, 82, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 396, 62, 260, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 312, 75, 82, 12
-  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 396, 75, 260, 12
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 312, 40, 82, 12
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 396, 40, 260, 12
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 312, 52, 82, 12
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 396, 52, 260, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 312, 64, 82, 12
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 396, 64, 260, 12
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 312, 76, 82, 12
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 396, 76, 260, 12
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 312, 88, 82, 12
   CONTROL "", 192, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 466, 88, 190, 12
-  CONTROL "", 170, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 312, 102, 344, 46
+  CONTROL "", 170, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 312, 100, 344, 46
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 49, 164, 49, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 101, 164, 49, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 164, 49, 14
@@ -17163,29 +17163,28 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 502, 357, 50, 14
   CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 557, 357, 50, 14
   CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 612, 357, 50, 14
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 36, 93, 12
-  CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 186, 36, 40, 12
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 49, 60, 12
-  CONTROL "", 121, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 153, 49, 40, 12
-  CONTROL "", 220, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 62, 43, 12
-  CONTROL "", 230, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 62, 90, 12
-  CONTROL "", 240, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 75, 43, 12
-  CONTROL "", 250, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 75, 90, 12
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 40, 93, 12
+  CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 186, 40, 40, 12
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 52, 70, 12
+  CONTROL "", 220, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 64, 43, 12
+  CONTROL "", 230, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 64, 90, 12
+  CONTROL "", 240, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 76, 43, 12
+  CONTROL "", 250, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 76, 90, 12
   CONTROL "", 191, "TBitmap", 0x00800000, 396, 88, 19, 11
   CONTROL "Artículos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 153, 617, 193
-  CONTROL "Almacén origen", 152, "Static", WS_GROUP, 251, 40, 55, 8
-  CONTROL "Almacén destino", -1, "Static", WS_GROUP, 251, 53, 55, 8
-  CONTROL "Número", -1, "Static", WS_GROUP, 50, 40, 38, 8
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 50, 53, 38, 8
-  CONTROL "Comentarios", -1, "Static", WS_GROUP, 251, 102, 55, 8
-  CONTROL "Movimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 25, 192, 67
-  CONTROL "Tipo movimiento", -1, "Static", WS_GROUP, 251, 66, 55, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 251, 92, 55, 8
-  CONTROL "Cambio divisa", -1, "Static", WS_GROUP, 419, 92, 44, 8
+  CONTROL "Almacén origen", 152, "Static", WS_GROUP, 251, 43, 55, 8
+  CONTROL "Almacén destino", -1, "Static", WS_GROUP, 251, 55, 55, 8
+  CONTROL "Número", -1, "Static", WS_GROUP, 50, 43, 38, 8
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 50, 55, 38, 8
+  CONTROL "Comentarios", -1, "Static", WS_GROUP, 251, 103, 55, 8
+  CONTROL "Movimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 192, 62
+  CONTROL "Tipo movimiento", -1, "Static", WS_GROUP, 251, 67, 55, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 251, 91, 55, 8
+  CONTROL "Cambio divisa", -1, "Static", WS_GROUP, 419, 91, 44, 8
   CONTROL "Agente", -1, "Static", WS_GROUP, 251, 79, 55, 8
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 66, 38, 8
+  CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 67, 38, 8
   CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 79, 38, 8
-  CONTROL "General", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 243, 25, 418, 125
+  CONTROL "General", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 243, 30, 418, 121
   CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 94, 192, 57
   CONTROL "", 400, "msctls_progress32", 0x00000000, 44, 349, 618, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -20273,5 +20272,36 @@ FONT 8, "MS Sans Serif"
   CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 8, 50, 8
   CONTROL "Fecha entrada", -1, "Static", WS_GROUP, 4, 182, 51, 8
   CONTROL "Fecha cierre", -1, "Static", WS_GROUP, 4, 196, 45, 8
+}
+
+EXTRA DIALOG DISCARDABLE 138, 96, 468, 299
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
+CAPTION "Campos extra"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 92, 40, 48, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 92, 53, 177, 11
+  CONTROL "Campo obligatorio", 120, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 68, 76, 11
+  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 92, 81, 106, 134
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 92, 98, 48, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 92, 111, 48, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 91, 143, 152, 11
+  CONTROL "+", 170, "Button", WS_TABSTOP, 245, 143, 11, 11
+  CONTROL "-", 180, "Button", WS_TABSTOP, 257, 143, 11, 11
+  CONTROL "", 190, "ListBox", LBS_SORT|LBS_NOTIFY|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 157, 176, 117
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00a00000, 281, 40, 178, 231
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 354, 281, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 410, 281, 50, 14
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Definición de campos extra", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 416, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 231, 99
+  CONTROL "Código", -1, "Static", WS_GROUP, 50, 43, 32, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 50, 55, 29, 8
+  CONTROL "Tipo", -1, "Static", WS_GROUP, 50, 85, 22, 8
+  CONTROL "Longitud", -1, "Static", WS_GROUP, 50, 101, 32, 8
+  CONTROL "Decimales", -1, "Static", WS_GROUP, 50, 114, 35, 8
+  CONTROL "Valores defecto", -1, "Button", BS_GROUPBOX, 44, 130, 231, 146
+  CONTROL "Valor", -1, "Static", WS_GROUP, 49, 146, 32, 8
+  CONTROL "Aplicar en...", -1, "Button", BS_GROUPBOX, 276, 29, 189, 247
 }
 
