--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20288,7 +20288,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 91, 143, 152, 11
   CONTROL "+", 170, "Button", WS_TABSTOP, 245, 143, 11, 11
   CONTROL "-", 180, "Button", WS_TABSTOP, 257, 143, 11, 11
-  CONTROL "", 190, "ListBox", LBS_SORT|LBS_NOTIFY|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 157, 176, 117
+  CONTROL "", 190, "ListBox", LBS_SORT|LBS_NOTIFY|WS_BORDER, 91, 157, 176, 117
   CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00a00000, 281, 40, 178, 231
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 354, 281, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 410, 281, 50, 14
