--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20288,8 +20288,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 91, 143, 152, 11
   CONTROL "+", 170, "Button", WS_TABSTOP, 245, 143, 11, 11
   CONTROL "-", 180, "Button", WS_TABSTOP, 257, 143, 11, 11
-  CONTROL "", 190, "ListBox", LBS_SORT|LBS_NOTIFY|WS_BORDER, 91, 157, 176, 117
-  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00a00000, 281, 40, 178, 231
+  CONTROL "", 190, "ListBox", LBS_SORT|LBS_NOTIFY|WS_BORDER, 91, 157, 176, 119
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 354, 281, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 410, 281, 50, 14
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -20303,5 +20302,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Valores defecto", -1, "Button", BS_GROUPBOX, 44, 130, 231, 146
   CONTROL "Valor", -1, "Static", WS_GROUP, 49, 146, 32, 8
   CONTROL "Aplicar en...", -1, "Button", BS_GROUPBOX, 276, 29, 189, 247
+  CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 283, 40, 177, 230
 }
 
