--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20318,7 +20318,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Valores defecto", -1, "Button", BS_GROUPBOX, 44, 130, 231, 146
   CONTROL "Valor", -1, "Static", WS_GROUP, 49, 146, 32, 8
   CONTROL "Aplicar en...", -1, "Button", BS_GROUPBOX, 276, 29, 189, 247
-  CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 283, 40, 177, 230
+  CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 283, 40, 177, 230
 }
 
 EXTRADET DIALOG DISCARDABLE 138, 96, 468, 299
