prestashop: pedido o presupuesto

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5541,12 +5541,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 151, 297, 12
   CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 164, 297, 12
   CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 177, 297, 12
-  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 190, 115, 12
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 293, 203, 41, 15
+  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 190, 99, 12
+  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 383, 205, 41, 15
   CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 129, 10
-  CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 245, 220, 125, 10
+  CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 220, 125, 10
   CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 207, 105, 10
-  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 293, 190, 40, 12
+  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 299, 190, 30, 12
+  CONTROL "", 320, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 299, 204, 30, 12
   CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 190, 12, 13
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 12
   CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 245, 44, 12
@@ -5568,8 +5569,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 49, 57, 28, 8
   CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 43, 26, 8
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 49, 70, 41, 8
-  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 244, 194, 45, 8
-  CONTROL "Latencia", -1, "Static", WS_GROUP, 245, 207, 33, 8
+  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 234, 194, 45, 8
+  CONTROL "Latencia", -1, "Static", WS_GROUP, 338, 209, 33, 8
   CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 43, 303, 384, 40
   CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 318, 74, 8
   CONTROL "Código EDI [EAN]", -1, "Static", WS_GROUP, 48, 331, 62, 8
@@ -5585,6 +5586,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Enviar con copia a", -1, "Static", WS_GROUP, 49, 83, 65, 8
   CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 196, 72, 8
   CONTROL "Enviar copia oculta", -1, "Static", WS_GROUP, 49, 97, 66, 8
+  CONTROL "Serie presupuesto", -1, "Static", WS_GROUP, 234, 208, 63, 8
 }
 
 EMPRESA_1 DIALOG DISCARDABLE 31, 12, 397, 287
@@ -7516,58 +7518,58 @@ CAPTION "Formas de pago"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", -1, "Button", BS_GROUPBOX, 2, 149, 282, 40
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 68, 4, 40, 12
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 68, 16, 214, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 68, 4, 40, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 68, 17, 214, 11
   CONTROL "Efectivo", 111, "Button", BS_RADIOBUTTON, 6, 41, 40, 10
-  CONTROL "No efectivo", 112, "Button", BS_RADIOBUTTON, 6, 53, 73, 10
-  CONTROL "Tarjeta de credito", 113, "Button", BS_RADIOBUTTON, 6, 65, 73, 10
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 68, 77, 42, 12
-  CONTROL "", 500, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 40, 42, 12
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 52, 42, 12
-  CONTROL "A la espera de documentación", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 150, 78, 109, 10
-  CONTROL "Cobrados", 140, "Button", BS_RADIOBUTTON, 6, 107, 48, 10
-  CONTROL "No cobrados", 141, "Button", BS_RADIOBUTTON, 6, 119, 66, 10
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 107, 42, 12
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 119, 42, 12
-  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 131, 42, 12
+  CONTROL "No efectivo", 112, "Button", BS_RADIOBUTTON, 6, 54, 73, 10
+  CONTROL "Tarjeta de credito", 113, "Button", BS_RADIOBUTTON, 6, 66, 73, 10
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 68, 78, 42, 11
+  CONTROL "", 500, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 40, 42, 11
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 53, 42, 11
+  CONTROL "A la espera de documentación", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 150, 79, 109, 10
+  CONTROL "Cobrados", 140, "Button", BS_RADIOBUTTON, 6, 109, 48, 10
+  CONTROL "No cobrados", 141, "Button", BS_RADIOBUTTON, 6, 122, 66, 10
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 106, 42, 11
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 119, 42, 11
+  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 132, 42, 11
   CONTROL "Utilizar entidad bancaria de la empresa", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 148, 135, 10
-  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 66, 161, 214, 12
-  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 66, 174, 20, 12
-  CONTROL "", 380, "Edit", WS_BORDER|WS_TABSTOP, 88, 174, 20, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 109, 174, 32, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 143, 174, 32, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 177, 174, 20, 12
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 199, 174, 80, 12
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 66, 200, 70, 12
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 140, 200, 140, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 66, 213, 70, 12
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 140, 213, 140, 12
+  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 66, 161, 214, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 66, 174, 20, 11
+  CONTROL "", 380, "Edit", WS_BORDER|WS_TABSTOP, 88, 174, 20, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 109, 174, 32, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 143, 174, 32, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 177, 174, 20, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 199, 174, 80, 11
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 66, 200, 70, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 140, 200, 140, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 66, 213, 70, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 140, 213, 140, 11
   CONTROL "", 425, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 66, 241, 212, 101
   CONTROL "Incluir en terminal punto de venta", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 270, 118, 10
   CONTROL "", 410, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 68, 282, 212, 101
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 66, 298, 40, 12
-  CONTROL "", 430, "Edit", WS_HSCROLL|WS_BORDER|WS_TABSTOP, 66, 327, 214, 12
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 66, 298, 40, 11
+  CONTROL "", 430, "Edit", WS_HSCROLL|WS_BORDER|WS_TABSTOP, 66, 327, 214, 11
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 124, 348, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 179, 348, 50, 14
   CONTROL "&Ayuda", 559, "Button", WS_TABSTOP, 234, 348, 50, 14
   CONTROL "Emitir como ", -1, "Button", BS_GROUPBOX, 2, 95, 140, 52
   CONTROL "Aplazamientos", -1, "Button", BS_GROUPBOX, 144, 95, 140, 52
-  CONTROL "Tipo de pago", -1, "Button", BS_GROUPBOX, 2, 30, 282, 62
+  CONTROL "Tipo de pago", -1, "Button", BS_GROUPBOX, 2, 31, 282, 62
   CONTROL "Código ", -1, "Static", WS_GROUP, 6, 6, 40, 8
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 6, 18, 44, 8
-  CONTROL "Comisión %", -1, "Static", WS_GROUP, 17, 80, 41, 8
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 6, 20, 44, 8
+  CONTROL "Comisión %", -1, "Static", WS_GROUP, 17, 81, 41, 8
   CONTROL "Subcuenta cobro", -1, "Static", WS_GROUP, 6, 203, 60, 8
   CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 2, 191, 282, 37
   CONTROL "Subcuenta gastos", -1, "Static", WS_GROUP, 6, 216, 60, 8
-  CONTROL "Nº de plazos", -1, "Static", WS_GROUP, 150, 110, 45, 8
+  CONTROL "Nº de plazos", -1, "Static", WS_GROUP, 150, 109, 45, 8
   CONTROL "Días primer plazo", -1, "Static", WS_GROUP, 150, 122, 60, 8
-  CONTROL "Días entre plazos", -1, "Static", WS_GROUP, 150, 134, 61, 8
+  CONTROL "Días entre plazos", -1, "Static", WS_GROUP, 150, 135, 61, 8
   CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 2, 259, 282, 54
   CONTROL "Imagen", -1, "Static", WS_GROUP, 6, 287, 29, 8
   CONTROL "Posición", -1, "Static", WS_GROUP, 6, 301, 32, 8
   CONTROL "Código de pago para generación de factura electónica", -1, "Button", BS_GROUPBOX, 2, 230, 282, 28
   CONTROL "Entrega inicial %", -1, "Static", WS_GROUP, 150, 43, 57, 8
-  CONTROL "Descuento %", -1, "Static", WS_GROUP, 150, 55, 49, 8
+  CONTROL "Descuento %", -1, "Static", WS_GROUP, 150, 56, 49, 8
   CONTROL "Código pago", -1, "Static", WS_GROUP, 5, 244, 45, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 6, 164, 23, 8
   CONTROL "Cuenta IBAN", -1, "Static", WS_GROUP, 6, 177, 47, 8
