--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18348,15 +18348,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Sincronización para pre-ventas", -1, "Static", SS_LEFTNOWORDWRAP, 41, 4, 428, 8
 }
 
-SITUACION DIALOG DISCARDABLE 77, 58, 281, 48
+SITUACION DIALOG DISCARDABLE 77, 58, 281, 58
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 9, 226, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 27, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 27, 50, 14
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 9, 220, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 54, 23, 80, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 38, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 38, 50, 14
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
+  CONTROL "Codigo Web", -1, "Static", WS_GROUP, 4, 26, 50, 8
 }
 
 SND_EDM DIALOG DISCARDABLE 18, 19, 282, 248
@@ -20334,5 +20336,34 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 410, 281, 50, 14
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Definición de campos extra", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 416, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
+
+ESTADOPEDIDO DIALOG DISCARDABLE 103, 127, 337, 71
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Estados"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 52, 10, 170, 57
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 27, 70, 12
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 123, 27, 60, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 226, 53, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 282, 53, 50, 14
+  CONTROL "Fecha/Hora", -1, "Static", WS_GROUP, 5, 30, 44, 8
+  CONTROL "Incidencia", -1, "Static", WS_GROUP, 5, 14, 33, 8
+}
+
+PEDCLI_5 DIALOG DISCARDABLE 64, -21, 670, 375
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 30, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 30, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 30, 50, 14
+  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 30, 50, 14
+  CONTROL "", 210, "TXBrowse", 0x00200000, 44, 48, 620, 323
+  CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Estados", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
