--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20340,9 +20340,9 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-ESTADOPEDIDO DIALOG DISCARDABLE 103, 127, 337, 71
+SITUACION-ESTADO DIALOG DISCARDABLE 103, 127, 337, 71
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Estados"
+CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 52, 10, 170, 57
@@ -20351,7 +20351,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 226, 53, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 282, 53, 50, 14
   CONTROL "Fecha/Hora", -1, "Static", WS_GROUP, 5, 30, 44, 8
-  CONTROL "Incidencia", -1, "Static", WS_GROUP, 5, 14, 33, 8
+  CONTROL "Situaciones", -1, "Static", WS_GROUP, 5, 14, 41, 8
 }
 
 PEDCLI_5 DIALOG DISCARDABLE 64, -21, 670, 375
@@ -20364,6 +20364,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 30, 50, 14
   CONTROL "", 210, "TXBrowse", 0x00200000, 44, 48, 620, 323
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Estados", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Situaciones", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
