--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1069,12 +1069,16 @@ ART_2 DIALOG DISCARDABLE -22, -7, 496, 286
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 210, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 36, 362, 112
-  CONTROL "Mostrar comentario", 380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 47, 163, 73, 10
-  CONTROL "", 370, "Edit", ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 163, 362, 112
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 446, 124
-  CONTROL "Descripcion larga", -1, "Static", WS_GROUP, 47, 38, 60, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 155, 446, 125
+  CONTROL "Aña&dir [F2]", 510, "Button", WS_TABSTOP, 49, 40, 50, 14
+  CONTROL "&Modificar [F3]", 511, "Button", WS_TABSTOP, 104, 40, 50, 14
+  CONTROL "&Eliminar [F4]", 512, "Button", WS_TABSTOP, 159, 40, 50, 14
+  CONTROL "", 100, "TXBrowse", 0x00300000, 47, 56, 438, 107
+  CONTROL "", 210, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 173, 362, 50
+  CONTROL "Mostrar comentario", 380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 47, 226, 73, 10
+  CONTROL "", 370, "Edit", ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 226, 362, 50
+  CONTROL "Descripciones por lenguaje", -1, "Button", BS_GROUPBOX, 44, 29, 446, 138
+  CONTROL "Descripcion larga", -1, "Static", WS_GROUP, 47, 175, 60, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 164, 446, 116
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
   CONTROL "Descripciones del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
@@ -20342,7 +20346,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 354, 281, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 410, 281, 50, 14
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Definición de campos extra", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 416, 8
+  CONTROL "Valores de campos extra", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 416, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
@@ -20372,5 +20376,40 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 210, "TXBrowse", 0x00200000, 44, 48, 620, 323
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Situaciones", -1, "Static", WS_GROUP, 44, 3, 120, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+LENGUAJES DIALOG DISCARDABLE 60, 16, 297, 61
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Lenguaje"
+FONT 8, "Helv"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 13, 33, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 75, 27, 210, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 188, 45, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 45, 50, 14
+  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 291, 40
+  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 31, 60, 8
+}
+
+ARTLENG DIALOG DISCARDABLE 140, 65, 382, 163
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Descripción por lenguaje"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 129, 44, 61, 12
+  CONTROL "", 111, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 191, 44, 178, 12
+  CONTROL "", 120, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 129, 57, 240, 12
+  CONTROL "", 130, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 129, 71, 240, 65
+  CONTROL "Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 272, 146, 50, 14
+  CONTROL "Cancelar", IDCANCEL, "Button", WS_TABSTOP, 327, 146, 50, 14
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Descripción por lenguaje de artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 232, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 333, 112
+  CONTROL "Lenguaje", -1, "Static", WS_GROUP, 50, 47, 34, 8
+  CONTROL "Descripción corta", -1, "Static", WS_GROUP, 50, 61, 63, 8
+  CONTROL "Descripción extendida", -1, "Static", WS_GROUP, 50, 74, 75, 8
 }
 
