--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -105,3 +105,5 @@ flat_atom_64 BITMAP "..\\bmp\\flat_atom_64.bmp"
 form_green_add_16 BITMAP "..\\bmp\\form_green_add_16.bmp"
 form_green_add_32 BITMAP "..\\bmp\\form_green_add_32.bmp"
 form_green_add_48_alpha BITMAP "..\\bmp\\form_green_add_48_alpha.bmp"
+user1_message_16 BITMAP "..\\bmp\\user1_message_16.bmp"
+user1_message_32 BITMAP "..\\bmp\\user1_message_32.bmp" 
