--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20351,7 +20351,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-ESTADO DIALOG DISCARDABLE 103, 127, 337, 71
+SITUACION_ESTADO DIALOG DISCARDABLE 103, 127, 337, 71
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
