--- a/resource/Gstimage11.rc
+++ b/resource/Gstimage11.rc
@@ -17,12 +17,12 @@ Components_Alpha_48 BITMAP "..\\bmp\\components_alpha_48.bmp"
 Package_Alpha_48 BITMAP "..\\bmp\\package_alpha_48.bmp"
 Document_Text_Alpha_48 BITMAP "..\\bmp\\document_text_alpha_48.bmp"
 Bookmark_Silver_Alpha_48 BITMAP "..\\bmp\\bookmark_silver_alpha_48.bmp"
-Truck_Red_Alpha_48 BITMAP "..\\bmp\\truck_red_alpha_48.bmp"
+Truck_Red_48 BITMAP "..\\bmp\\truck_red_48.bmp"
 Forklift_Alpha_48 BITMAP "..\\bmp\\Forklift_alpha_48.bmp"
 Data_Green_Alpha_48 BITMAP "..\\bmp\\Data_Green_alpha_48.bmp"
 Courthouse_Alpla_48 BITMAP "..\\bmp\\courthouse_alpla_48.bmp"
 Money2_delete_48 BITMAP "..\\bmp\\Money2_delete_48.bmp"
-Photo_landscape2_48_alpha BITMAP "..\\bmp\\Photo_landscape2_48_alpha.bmp"
+Photo_landscape2_48 BITMAP "..\\bmp\\Photo_landscape2_48.bmp"
 Mail_earth_48_alpha BITMAP "..\\bmp\\mail_earth_48_alpha.bmp"
 Cashier_delete_48_alpha BITMAP "..\\bmp\\Cashier_delete_48_alpha.bmp"
 Cashier_businessman2_48_alpha BITMAP "..\\bmp\\Cashier_businessman2_48_alpha.bmp"
@@ -35,7 +35,6 @@ Bookkeeper_alpha_48 BITMAP "..\\bmp\\Bookkeeper_alpha_48.bmp"
 Magic_wand_alpha_48 BITMAP "..\\bmp\\Magic_wand_alpha_48.bmp"
 Pda2_write_alpha_48 BITMAP "..\\bmp\\Pda2_Write_Alpha_48.bmp"
 Star_Red_48 BITMAP "..\\bmp\\Star_Red_48.bmp"
-Star_Red_Alpha_48 BITMAP "..\\bmp\\Star_Red_Alpha_48.bmp"
 Clipboard_Empty_48 BITMAP "..\\bmp\\clipboard_empty_48.bmp"
 Calendar_Alpha_48 BITMAP "..\\bmp\\Calendar_Alpha_48.bmp"
 Symbol_Questionmark_Alpha_48 BITMAP "..\\bmp\\Symbol_Questionmark_Alpha_48.bmp"
@@ -101,7 +100,6 @@ facturas_proveedores_48_alpha BITMAP "..\\bmp\\facturas_proveedores_48_alpha.bmp
 factura_rectificatica_proveedor_48_alpha BITMAP "..\\bmp\\factura_rectificatica_proveedor_48_alpha.bmp"
 clock2_run_48_alpha BITMAP "..\\bmp\\clock2_run_48_alpha.bmp"
 clock2_stop_48_alpha BITMAP "..\\bmp\\clock2_stop_48_alpha.bmp"
-package_48_alpha BITMAP "..\\bmp\\package_48_alpha.bmp"
 partes_producion_48_alpha BITMAP "..\\bmp\\partes_producion_48_alpha.bmp"
 worker_48_alpha BITMAP "..\\bmp\\worker_48_alpha.bmp"
 robot_48_alpha BITMAP "..\\bmp\\robot_48_alpha.bmp"
