--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -107,3 +107,6 @@ form_green_add_32 BITMAP "..\\bmp\\form_green_add_32.bmp"
 form_green_add_48_alpha BITMAP "..\\bmp\\form_green_add_48_alpha.bmp"
 user1_message_16 BITMAP "..\\bmp\\user1_message_16.bmp"
 user1_message_32 BITMAP "..\\bmp\\user1_message_32.bmp" 
+user_message_48 BITMAP "..\\bmp\\user_message_48.bmp" 
+symbol_euro_48 BITMAP "..\\bmp\\symbol_euro_48.bmp" 
+hand_point_48 BITMAP "..\\bmp\\hand_point_48.bmp" 
