--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20413,3 +20413,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción extendida", -1, "Static", WS_GROUP, 50, 74, 75, 8
 }
 
+CENTROCOSTE DIALOG DISCARDABLE 60, 16, 297, 90
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Centro de coste"
+FONT 8, "Helv"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 80, 13, 33, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 80, 26, 210, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 80, 47, 80, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 80, 60, 80, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 188, 72, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 72, 50, 14
+  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 294, 40
+  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 29, 60, 8
+  CONTROL "Objetivo de venta", 4001, "Static", WS_GROUP, 10, 51, 60, 8
+  CONTROL "Objetivo de compra", 4002, "Static", WS_GROUP, 10, 62, 67, 8
+}
+
