--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -110,3 +110,5 @@ user1_message_32 BITMAP "..\\bmp\\user1_message_32.bmp"
 user_message_48 BITMAP "..\\bmp\\user_message_48.bmp" 
 symbol_euro_48 BITMAP "..\\bmp\\symbol_euro_48.bmp" 
 hand_point_48 BITMAP "..\\bmp\\hand_point_48.bmp" 
+bookmarks_preferences_32 BITMAP "..\\bmp\\bookmarks_preferences_32.bmp" 
+bookmarks_preferences_16 BITMAP "..\\bmp\\bookmarks_preferences_16.bmp" 
