--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -929,52 +929,58 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "General", -1, "Button", BS_GROUPBOX, 44, 29, 336, 36
   CONTROL "Código de barras", -1, "Button", BS_GROUPBOX, 382, 29, 108, 251
-  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 44, 67, 336, 73
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 45, 219, 336, 61
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 44, 66, 336, 98
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 45, 233, 336, 47
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 102, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 51, 279, 11
   CONTROL "Añ&d [F2]", 300, "Button", WS_TABSTOP, 387, 39, 33, 14
   CONTROL "&Mod [F3]", 310, "Button", WS_TABSTOP, 420, 39, 33, 14
   CONTROL "&Elim [F4]", 320, "Button", WS_TABSTOP, 453, 39, 33, 14
   CONTROL "", 330, "TXBrowse", 0x00200000, 388, 53, 98, 222
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 76, 56, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 156, 76, 221, 11
-  CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 88, 56, 11
-  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 156, 88, 221, 11
-  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 100, 56, 11
-  CONTROL "", 351, "Edit", WS_BORDER, 156, 100, 206, 11
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 75, 56, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 156, 75, 221, 11
+  CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 87, 56, 11
+  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 156, 87, 221, 11
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 99, 56, 11
+  CONTROL "", 351, "Edit", WS_BORDER, 156, 99, 206, 11
   CONTROL "", 352, "TBitMap", 0x00800000, 363, 100, 14, 11
-  CONTROL "", 355, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 112, 56, 11
-  CONTROL "", 356, "Edit", WS_BORDER, 156, 112, 206, 11
+  CONTROL "", 355, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 111, 56, 11
+  CONTROL "", 356, "Edit", WS_BORDER, 156, 111, 206, 11
   CONTROL "", 357, "TBitMap", 0x00800000, 363, 112, 14, 11
-  CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 124, 56, 11
-  CONTROL "", 391, "Edit", WS_BORDER, 156, 124, 221, 11
+  CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 123, 56, 11
+  CONTROL "", 391, "Edit", WS_BORDER, 156, 123, 221, 11
+  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 135, 56, 11
+  CONTROL "", 401, "Edit", WS_BORDER, 156, 135, 206, 11
+  CONTROL "", 402, "TBitMap", 0x00800000, 363, 136, 14, 11
+  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 148, 279, 11
+  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 175, 88, 10
+  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 187, 102, 11
+  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 216, 175, 90, 10
+  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 233, 188, 55, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 210, 41, 11
+  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 141, 210, 45, 41
+  CONTROL "Producto obsoleto ", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 216, 211, 128, 10
   CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 242, 73, 10
-  CONTROL "Producto obsoleto ", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 266, 128, 10
-  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 192, 90, 10
-  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 205, 55, 10
-  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 228, 279, 11
-  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 153, 88, 10
-  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 165, 102, 11
-  CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 49, 54, 39, 8
-  CONTROL "Familia", -1, "Static", WS_GROUP, 49, 79, 33, 8
-  CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 91, 47, 8
-  CONTROL "Categoría", -1, "Static", WS_GROUP, 49, 103, 35, 8
-  CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 127, 47, 8
-  CONTROL "Temporada", -1, "Static", WS_GROUP, 49, 115, 41, 8
-  CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
-  CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 168, 41, 8
-  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 142, 336, 37
-  CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 44, 181, 336, 37
   CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 254, 101, 10
   CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 98, 265, 56, 11
+  CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 49, 54, 39, 8
+  CONTROL "Familia", -1, "Static", WS_GROUP, 49, 78, 33, 8
+  CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 90, 47, 8
+  CONTROL "Categoría", -1, "Static", WS_GROUP, 49, 102, 35, 8
+  CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 126, 47, 8
+  CONTROL "Temporada", -1, "Static", WS_GROUP, 49, 114, 41, 8
+  CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+  CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 190, 41, 8
+  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 164, 164, 37
+  CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 210, 164, 170, 37
   CONTROL "Factor", -1, "Static", WS_GROUP, 49, 268, 33, 8
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 289, 242, 41, 11
-  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 332, 242, 45, 41
-  CONTROL "Caducidad", -1, "Static", WS_GROUP, 244, 245, 40, 8
-  CONTROL "Ubicación", -1, "Static", WS_GROUP, 49, 231, 39, 8
+  CONTROL "Caducidad", -1, "Static", WS_GROUP, 49, 213, 40, 8
+  CONTROL "Ubicación", -1, "Static", WS_GROUP, 49, 151, 39, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 49, 138, 35, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 200, 164, 31
+  CONTROL "", 4004, "Button", BS_GROUPBOX, 210, 200, 169, 31
 }
 
 ART_10 DIALOG DISCARDABLE 32, 6, 496, 286
@@ -20413,7 +20419,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción extendida", -1, "Static", WS_GROUP, 50, 74, 75, 8
 }
 
-<<<<<<< HEAD
 ESTADOSAT DIALOG DISCARDABLE 175, 153, 240, 119
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Estados"
@@ -20430,7 +20435,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Código", -1, "Static", WS_GROUP, 9, 18, 25, 8
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 4, 4, 232, 84
   CONTROL "Nombre", -1, "Static", WS_GROUP, 9, 32, 27, 8
-=======
+}
+
 CENTROCOSTE DIALOG DISCARDABLE 60, 16, 297, 90
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Centro de coste"
@@ -20447,6 +20453,5 @@ FONT 8, "Helv"
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 29, 60, 8
   CONTROL "Objetivo de venta", 4001, "Static", WS_GROUP, 10, 51, 60, 8
   CONTROL "Objetivo de compra", 4002, "Static", WS_GROUP, 10, 62, 67, 8
->>>>>>> origin/master
 }
 
