--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14704,7 +14704,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-NOMBRE_FILTRO DIALOG DISCARDABLE 30, 84, 252, 62
+NOMBRE_FILTRO DIALOG DISCARDABLE 30, 84, 252, 81
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Nombre del filtro"
 FONT 8, "MS Sans Serif"
@@ -17803,7 +17803,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Busquedas por números de serie", -1, "Static", WS_GROUP, 44, 3, 69, 8
 }
 
-SEARCH DIALOG DISCARDABLE 69, 96, 361, 105
+SEARCH DIALOG DISCARDABLE 69, 96, 361, 103
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Buscar..."
 FONT 8, "MS Sans Serif"
@@ -20429,5 +20429,20 @@ FONT 8, "Helv"
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 29, 60, 8
   CONTROL "Objetivo de venta", 4001, "Static", WS_GROUP, 10, 51, 60, 8
   CONTROL "Objetivo de compra", 4002, "Static", WS_GROUP, 10, 62, 67, 8
+}
+
+buscar_tipologias DIALOG DISCARDABLE 37, 77, 281, 69
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
+CAPTION "Busqueda de articulos..."
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 47, 4, 231, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 47, 17, 230, 12
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 47, 30, 231, 12
+  CONTROL "&Aceptar", 500, "Button", WS_TABSTOP, 173, 51, 50, 14
+  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 228, 51, 50, 14
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 3, 20, 41, 8
+  CONTROL "Familias", -1, "Static", WS_GROUP, 3, 7, 37, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 33, 41, 8
 }
 
