--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19201,11 +19201,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 482, 139, 75, 12
   CONTROL "", 240, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 482, 152, 75, 12
   CONTROL "", 250, "Edit", ES_RIGHT|WS_BORDER, 452, 165, 105, 12
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 48, 199, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 103, 199, 50, 14
-  CONTROL "&Zoom", 502, "Button", WS_TABSTOP, 158, 199, 50, 14
-  CONTROL "&Eliminar [F4]", 503, "Button", WS_TABSTOP, 213, 199, 50, 14
-  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 48, 215, 508, 92
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 48, 207, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 103, 207, 50, 14
+  CONTROL "&Zoom", 502, "Button", WS_TABSTOP, 158, 207, 50, 14
+  CONTROL "&Eliminar [F4]", 503, "Button", WS_TABSTOP, 213, 207, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 48, 224, 508, 83
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 404, 314, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 459, 314, 50, 14
   CONTROL "&Ayuda", 559, "Button", WS_TABSTOP, 514, 314, 50, 14
@@ -19219,9 +19219,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 50, 155, 37, 8
   CONTROL "Móvil", -1, "Static", WS_GROUP, 50, 168, 23, 8
   CONTROL "General", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 520, 55
-  CONTROL "Datos personales", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 89, 337, 93
-  CONTROL "Horas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 187, 520, 124
-  CONTROL "Costes operario ", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 388, 89, 176, 93
+  CONTROL "Datos personales", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 89, 337, 106
+  CONTROL "Horas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 197, 520, 114
+  CONTROL "Costes operario ", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 388, 89, 176, 106
   CONTROL "Nómina mes", -1, "Static", WS_GROUP, 396, 103, 41, 8
   CONTROL "SS.SS mes", -1, "Static", WS_GROUP, 396, 116, 38, 8
   CONTROL "N. pagas año", -1, "Static", WS_GROUP, 396, 129, 51, 8
@@ -19230,6 +19230,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tot. costo hora", -1, "Static", WS_GROUP, 396, 168, 55, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Operario", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 105, 178, 269, 12
+  CONTROL "Email", -1, "Static", WS_GROUP, 50, 181, 41, 8
 }
 
 TRANSP DIALOG DISCARDABLE 60, 16, 295, 239
@@ -20440,7 +20442,7 @@ FONT 8, "Helv"
   CONTROL "Objetivo de compra", 4002, "Static", WS_GROUP, 10, 62, 67, 8
 }
 
-buscar_tipologias DIALOG DISCARDABLE 37, 77, 281, 69
+BUSCAR_TIPOLOGIAS DIALOG DISCARDABLE 37, 77, 281, 69
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
 CAPTION "Busqueda de articulos..."
 FONT 8, "MS Sans Serif"
