cambio de logo y comentarios en reporting

--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -111,4 +111,6 @@ user_message_48 BITMAP "..\\bmp\\user_message_48.bmp"
 symbol_euro_48 BITMAP "..\\bmp\\symbol_euro_48.bmp" 
 hand_point_48 BITMAP "..\\bmp\\hand_point_48.bmp" 
 bookmarks_preferences_32 BITMAP "..\\bmp\\bookmarks_preferences_32.bmp" 
-bookmarks_preferences_16 BITMAP "..\\bmp\\bookmarks_preferences_16.bmp" 
+bookmarks_preferences_16 BITMAP "..\\bmp\\bookmarks_preferences_16.bmp"
+centro_coste_32 BITMAP "..\\bmp\\centro_coste_32.bmp"
+centro_coste_16 BITMAP "..\\bmp\\centro_coste_16.bmp" 
