--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -114,3 +114,5 @@ bookmarks_preferences_32 BITMAP "..\\bmp\\bookmarks_preferences_32.bmp"
 bookmarks_preferences_16 BITMAP "..\\bmp\\bookmarks_preferences_16.bmp"
 centro_coste_32 BITMAP "..\\bmp\\centro_coste_32.bmp"
 centro_coste_16 BITMAP "..\\bmp\\centro_coste_16.bmp" 
+zoom_in_48 BITMAP "..\\bmp\\zoom_in_48.bmp"
+zoom_in_16 BITMAP "..\\bmp\\zoom_in_16.bmp"
