--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20505,7 +20505,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Estado", -1, "Static", WS_GROUP, 283, 44, 41, 8
 =======
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 95, 40, 230, 12
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 95, 52, 230, 121
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_SIMPLE|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 95, 52, 230, 121
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 95, 66, 230, 12
   CONTROL "&Aceptar", IDOK, "Button", WS_TABSTOP, 227, 156, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 282, 156, 50, 14
