--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20512,3 +20512,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
 }
 
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+BUSCAR_COMBO DIALOGEX DISCARDABLE 6, 18, 210, 142
+STYLE DS_SHELLFONT|WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Dialog"
+FONT 8, "Tahoma", 0, 0, 1
+{
+  CONTROL "OK", IDOK, "Button", WS_TABSTOP, 160, 5, 45, 15
+  CONTROL "Cancel", IDCANCEL, "Button", WS_TABSTOP, 160, 23, 45, 15
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 6, 5, 148, 107
+}
+
